fixed small align issue

--- a/Apps/MathLab_Data/PhDemoJS_ML.css
+++ b/Apps/MathLab_Data/PhDemoJS_ML.css
@@ -30,6 +30,7 @@
 width: 200px;
 padding-top: 50px;
 margin-left:10px;
+vertical-align: middle;
 
 }
 /* #graph > div, #demo > div{
