--- a/src/css/PhDemoJS.css
+++ b/src/css/PhDemoJS.css
@@ -23,11 +23,11 @@
   
   background-color: rgb(168, 202, 191);
   padding: 20px 20px;
-  align-items: left;
+  align-items: center;
   box-shadow: 50px 50px 50px 50px #888888;
   overflow: auto;
   justify-content: center;
-  vertical-align: middle;
+
 }
 @keyframes gradient {
 	0% {
@@ -43,17 +43,18 @@
 
 #graph{
   overflow: hidden;
-  vertical-align: middle;
+  vertical-align: middle!important;
   margin-left: 40px;
 }
 
 #interactions{
-vertical-align: middle;
+
 width:200px;
 max-width:80%;
 min-width: 200px;
 flex-grow: 1;
 flex-basis: auto;
+vertical-align: middle!important;
 
 }
 /* #graph > div, #demo > div{
